test/spec_vectors/simd_splat/fail/module_7.wat
(module (func (result v128) i16x8.splat (f64.const 1.0)))